fix(tests,cmds): fix some tests and commands